--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -3,9 +3,28 @@ header {
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 header .logo {
     background: url("../images/logo.png") no-repeat;
     left: 20px;
     height: 100%;
+    width: 142px;
+    display:inline-block;;
+}
+
+#api_status {
+    position: relative;
+    right: 30px;
+    width: 40px;
+    height: 40px;
+    float: right;
+    border-radius: 50%;
+    background-color: #cccccc;
+}
+
+#api_status.available {
+    background-color: #ff545f;
 }
